--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ main{
 }
 
 .spinning {
-    transition: linear all 2s;
+    transition: linear transform 2s;
 }
 
 @media screen and (max-width: 600px){
